# algorithm-components

./: .gitignore  .gitmodules  CMakeLists.txt  ExternallibConfig.cmake.in  ExternallibConfig.cmake.in.example  README.md
app/: CMakeLists.txt
app/include/trans_data/: data_reader.h  data_writer.h
app/src/eval_time/: algocomp_eval_time.cpp
app/src/profile/: algocomp_profile.cpp
app/src/trans_data/: data_reader.cpp  data_writer.cpp  trans_data_offline.cpp
core/: CMakeLists.txt
core/include/attribute/: attr_op_ctx.h  attr_op_ctx_pack.h  attr_transer.h  cate_attr_op_ctx.h  rv_attr_op_ctx.h  setcate_attr_op_ctx.h  time_attr_op_ctx.h
core/include/calibration/: calibration.h  calibration_daemon.h  hybrid.h  isotonic_regression.h  prior_correction.h
core/include/common/: type_def.h
core/include/encode/: feat_enc_daemon.h  feature_encoder.h  feature_hash.h  feature_map.h
core/include/feature/: bucketize_op.h  bucketize_op_ctx.h  comp_op_ctx.h  compare_op.h  cross_all_op_ctx.h  cross_op.h  cross_op_ctx.h  feat_op_ctx.h  feat_op_ctx_pack.h  feat_transer.h  feature_operator.h  log_op.h  log_op_ctx.h
core/include/log/: algocomp_log.h
core/include/model/: adaqs_model.h  linear_model.h  model.h  model_daemon.h  raw_gbdt_model.h  xgb_predictor.h
core/include/pipeline/: pipeline.h  pl_comp.h  pl_comp_pool.h  pl_head.h  pl_middle.h  pl_tail.h
core/include/resource/: resource_manager.h
core/src/attribute/: attr_op_ctx.cpp  attr_op_ctx_pack.cpp  attr_transer.cpp  cate_attr_op_ctx.cpp  rv_attr_op_ctx.cpp  setcate_attr_op_ctx.cpp  time_attr_op_ctx.cpp
core/src/calibration/: calibration_daemon.cpp  hybrid.cpp  isotonic_regression.cpp  prior_correction.cpp
core/src/common/: type_def.cpp
core/src/encode/: feat_enc_daemon.cpp  feature_hash.cpp  feature_map.cpp
core/src/feature/: bucketize_op.cpp  bucketize_op_ctx.cpp  comp_op_ctx.cpp  compare_op.cpp  cross_all_op_ctx.cpp  cross_op.cpp  cross_op_ctx.cpp  feat_op_ctx.cpp  feat_op_ctx_pack.cpp  feat_transer.cpp  log_op.cpp  log_op_ctx.cpp
core/src/log/: algocomp_log.cpp
core/src/model/: adaqs_model.cpp  linear_model.cpp  model_daemon.cpp  raw_gbdt_model.cpp  xgb_predictor.cpp
core/src/pipeline/: pipeline.cpp  pl_comp.cpp  pl_comp_pool.cpp  pl_head.cpp  pl_middle.cpp  pl_tail.cpp
core/src/resource/: resource_manager.cpp
docs/: build.rst  conf.py  config.rst  data-model.rst  intro.rst
docs/_build/doctrees/: build.doctree  config.doctree  data-model.doctree  environment.pickle  index.doctree  intro.doctree  user-manual.doctree
docs/_build/html/: .buildinfo  build.html  config.html  data-model.html  genindex.html  index.html  intro.html  objects.inv  search.html  searchindex.js  user-manual.html
docs/_build/html/_sources/: index.rst.txt  user-manual.rst.txt
proto/: CMakeLists.txt
proto/attrpb/: attribute_bunch.pb.cc  attribute_bunch.pb.h  attribute_data.pb.cc  attribute_data.pb.h  auc_impr_attrs.pb.cc  auc_impr_attrs.pb.h  setcate_value.pb.cc  setcate_value.pb.h
proto/encpb/: auc_impr_encs.pb.cc  auc_impr_encs.pb.h  encode_bunch.pb.cc  encode_bunch.pb.h  encode_data.pb.cc  encode_data.pb.h
proto/featpb/: auc_impr_feats.pb.cc  auc_impr_feats.pb.h  cont_feat_data.pb.cc  cont_feat_data.pb.h  cont_feat_grp.pb.cc  cont_feat_grp.pb.h  disc_feat_data.pb.cc  disc_feat_data.pb.h  disc_feat_grp.pb.cc  disc_feat_grp.pb.h  feature_bunch.pb.cc  feature_bunch.pb.h
protobuf_src/attrpb/: attribute_bunch.proto  attribute_data.proto  auc_impr_attrs.proto  setcate_value.proto
protobuf_src/encpb/: auc_impr_encs.proto  encode_bunch.proto  encode_data.proto
protobuf_src/featpb/: auc_impr_feats.proto  cont_feat_data.proto  cont_feat_grp.proto  disc_feat_data.proto  disc_feat_grp.proto  feature_bunch.proto
protobuf_src/scorepb/: score_bunch.proto
python/hashenc_to_seqenc/: hashenc_to_seqenc.py
shell/: build.sh  trans_data_offline_.sh
swig/: CMakeLists.txt  algocomp.i
test/: CMakeLists.txt
test/include/util/: check_feat_exists.h
test/src/: main.cpp
test/src/calibration/: test_calibration_daemon.cpp  test_hybrid.cpp  test_isotonic_regression.cpp  test_prior_correction.cpp
test/src/conf/: test_read_xml.cpp
test/src/justtest/: just_test.cpp
test/src/model/: test_linear_model.cpp  test_model_daemon.cpp
test/src/online/: test_offline.py  test_online.cpp
test/src/pipeline/: test_attr_transer.cpp  test_feat_enc_daemon.cpp  test_feat_transer.cpp  test_pl_comp_pool.cpp
test/src/util/: check_feat_exists.cpp
test/test-data/: 1-attr-trans.xml  1-feat-trans.xml  1-pipeline.xml  1-resource.xml
test/test-data/1-calibrations/: 1-isotonic-regression.txt
test/test-data/1-models/: 1-feat-map.txt  1-skl-model.txt  1-skl-sample.txt  1-vw-model.txt  1-xgb-model.txt
test/test-data/4-models/: 2-skl-model.txt
